flicker fix

--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,8 @@
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
+    /*** patch for jquerymobile page flicker that was happending ***/
+    -webkit-backface-visibility: hidden; 
 }
 
 body {
